<resources>
    <string name="app_name">CleanFuel</string>
    <string name="clean_flue">Clean Flue</string>
    <string name="login">Login</string>
    <string name="usuario">Username</string>
    <string name="digite_o_sua_senha">Password</string>
    <string name="logar">SUBMIT</string>
    <string name="sing_in">Sing in</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm">Confirm</string>
    <string name="sing_up">Sing Up </string>
    <string name="lo_in">login</string>
    <string name="username">Username</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="quali">Qualidade da gasolina:</string>
    <string name="title_item_list">Postos</string>
    <string name="title_item_detail">Posto Detalhes</string>
</resources>
