<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".app.LoginActivity">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/card_login"
        android:layout_marginTop="42dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/clean_flue"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_login"
        android:layout_width="300dp"
        android:layout_height="350dp"
        android:layout_centerInParent="true"
        android:elevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <TextView
                android:id="@+id/titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="29dp"
                android:layout_marginTop="19dp"
                android:fontFamily="@font/audiowide"
                android:text="@string/login"
                android:textColor="@color/colorPrimary"
                android:textSize="28sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/username_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/titulo"
                android:layout_marginVertical="10dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="29dp"
                android:hint="@string/usuario"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:inputType="" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/username_text_input"
                android:layout_marginVertical="10dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:layout_marginHorizontal="29dp"
                    android:hint="@string/digite_o_sua_senha"
                    android:textSize="20sp"
                    android:textColor="@color/black" />
            </android.support.design.widget.TextInputLayout>
            <android.support.v7.widget.CardView
                android:id="@+id/card_login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorPrimary"
                android:layout_below="@id/password_text_input"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="29dp"
                android:layout_marginTop="20dp"
                android:onClick="login">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/lo_in"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </android.support.v7.widget.CardView>


            <TextView
                android:id="@+id/sing_up_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif"
                android:text="@string/sing_up"
                android:layout_marginTop="30dp"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:layout_below="@id/card_login_btn"
                android:onClick="singin"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>



</RelativeLayout>