<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.SingInActivity"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/card_login"
        android:layout_marginTop="42dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/clean_flue"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_login"
        android:layout_width="300dp"
        android:layout_height="450dp"
        android:layout_centerInParent="true"
        android:elevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <TextView
                android:id="@+id/titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="29dp"
                android:layout_marginTop="19dp"
                android:fontFamily="@font/audiowide"
                android:text="@string/sing_in"
                android:textColor="@color/colorPrimary"
                android:textSize="28sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/username_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/titulo"
                android:layout_marginVertical="10dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="29dp"
                    android:hint="@string/usuario"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/username_text_input"
                android:layout_marginVertical="10dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="29dp"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_text_input"
                android:layout_marginVertical="10dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="29dp"
                    android:hint="@string/digite_o_sua_senha"
                    android:textSize="20sp"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/confirm_password_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_text_input"
                android:layout_marginVertical="10dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:layout_marginHorizontal="29dp"
                    android:hint="@string/confirm_password"
                    android:textSize="20sp"
                    android:textColor="@color/black" />
            </android.support.design.widget.TextInputLayout>
            <android.support.v7.widget.CardView
                android:id="@+id/card_login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorPrimary"
                android:layout_below="@id/confirm_password_text_input"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="29dp"
                android:layout_marginTop="30dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginVertical="5dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/confirm"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:onClick="confirm"/>

            </android.support.v7.widget.CardView>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>